AM_CFLAGS = -Wall -Werror -O2 $(OPT_EXPERIMENTAL) $(OPT_DEBUGGING)

noinst_LTLIBRARIES = libjni_impl.la

INCLUDES = -I../..

libjni_impl_la_SOURCES = \
	net_IPTrace.c \
	net_IPTrace.h \
	net_Link.c \
	net_Link.h \
	net_Node.c \
	net_Node.h \
	net_IGPDomain.c \
	net_IGPDomain.h \
	bgp_Domain.c \
	bgp_Domain.h \
	bgp_Filter.c \
	bgp_Filter.h \
	bgp_Peer.c \
	bgp_Peer.h \
	bgp_Router.c \
	bgp_Router.h

