noinst_LTLIBRARIES = libbgp.la

INCLUDES = -I..

libbgp_la_SOURCES = \
	as.c \
	as.h \
	as_t.h \
	bgp_assert.h \
	bgp_assert.c \
	brite.h \
	comm.c \
	comm.h \
	comm_t.h \
	dp_rules.c \
	dp_rules.h \
	ecomm.c \
	ecomm.h \
	ecomm_t.h \
	filter.c \
	filter.h \
	filter_parser.c \
	filter_parser.h \
	filter_registry.c \
	filter_registry.h \
	filter_t.h \
	message.c \
	message.h \
	mrtd.c \
	mrtd.h \
	path.c \
	path.h \
	path_segment.c \
	path_segment.h \
	peer.c \
	peer.h \
	peer_t.h \
	predicate_parser.c \
	predicate_parser.h \
	qos.c \
	qos.h \
	qos_t.h \
	rexford.c \
	rexford.h \
	rib.c \
	rib.h \
	rib_t.h \
	route.c \
	route.h \
	route_list.c \
	route_reflector.c \
	route_reflector.h \
	routes_list.c \
	routes_list.h \
	route_t.h \
	stats.h \
	tie_breaks.c \
	tie_breaks.h

AM_CFLAGS = -Wall -Werror -O2

