noinst_LTLIBRARIES = libnet.la

INCLUDES = -I..

libnet_la_SOURCES = \
	dijkstra.c \
	dijkstra.h \
	icmp.c \
	icmp.h \
	igp.c \
	igp.h \
	ipip.c \
	ipip.h \
	link.c \
	link.h \
	message.c \
	message.h \
	net_path.c \
	net_path.h \
	network.c \
	network.h \
	prefix.c \
	prefix.h \
	protocol.c \
	protocol.h \
	routing.c \
	routing.h

AM_CFLAGS = -Wall -Werror -O2
